# ecs-ui

./: .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: EcsUiWarnings.cmake
docs/: clay-cutover-stage8-gate.md  clay-cutover-stage8-texelotl-ab.py  phase_29_glowfish_mobile_spike.md  retained_projection_scheduling.md  solver-lowering.md  text_input_design.md
docs/plans/: clay-cutover-stage0-inventory.md  clay-cutover.md  dx-hardening.md  host-runner.md  input-routing.md  layout-backend-contain.md  layout-backend-direction.md  layout-paint-pass.md  layout-solver-prototype.md
examples/raylib_demo/: PRESSURE_TEST_PLAN.md  clay_main.c  clay_raylib_bridge.c  clay_raylib_bridge.h  demo_anim.c  demo_anim.h  demo_app.c  demo_app.h  demo_nav.c  demo_nav.h  demo_terminal.c  demo_terminal.h  demo_text_input.c  demo_text_input.h  demo_theme.c  demo_theme.h  demo_ui.c  demo_ui.h  demo_ui_action_button.c  demo_ui_action_button.h  demo_ui_build.c  demo_ui_events.c  demo_ui_internal.h  demo_ui_item_row_widget.c  demo_ui_item_rows.c  demo_ui_items.c  main.c
include/ecs_ui/: ecs_ui.h  ecs_ui_animation.h  ecs_ui_clay.h  ecs_ui_frame.h  ecs_ui_gesture.h  ecs_ui_navigation.h  ecs_ui_overlay.h  ecs_ui_paint.h  ecs_ui_projection.h  ecs_ui_raylib.h  ecs_ui_runner.h  ecs_ui_text_input.h
src/: ecs_ui.c  ecs_ui_animation.c  ecs_ui_clay.c  ecs_ui_frame.c  ecs_ui_frame_internal.h  ecs_ui_gesture.c  ecs_ui_interaction.c  ecs_ui_interaction.h  ecs_ui_navigation.c  ecs_ui_overlay.c  ecs_ui_paint.c  ecs_ui_paint_clay_adapter.c  ecs_ui_paint_clay_adapter.h  ecs_ui_paint_internal.h  ecs_ui_projection.c  ecs_ui_projection_internal.h  ecs_ui_raylib.c  ecs_ui_raylib_frame.c  ecs_ui_raylib_runner.c  ecs_ui_runner.c  ecs_ui_scroll_state.c  ecs_ui_scroll_state.h  ecs_ui_solver.c  ecs_ui_solver.h  ecs_ui_style.c  ecs_ui_style.h  ecs_ui_text_input.c
tests/: ecs_ui_basic.c  ecs_ui_clay_command_inventory.c  ecs_ui_clay_parity.c  ecs_ui_debug_dump.c  ecs_ui_frame_classifier.c  ecs_ui_frame_containment.c  ecs_ui_frame_errors.c  ecs_ui_frame_header_compile.c  ecs_ui_paint_clay_diff.c  ecs_ui_paint_list.c  ecs_ui_raylib_draw_list.c  ecs_ui_raylib_paint_renderer.c  ecs_ui_raylib_pixel_ab.c  ecs_ui_raylib_presentation_cache.c  ecs_ui_raylib_runner.c  ecs_ui_solver_parity.c  ecs_ui_wake_registry.c
